<resources>
    <string name="app_name">Services</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start_service">Start Service</string>
    <string name="end_service">End Service</string>
    <string name="download_image">Download Image</string>
    <string name="intent_download_img">Intent Download Img</string>
    <string name="job_intent_download_img">Job Intent Download Img</string>
    <string name="work_manager_download_img">Work Manager Download Img</string>
</resources>