<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activities.MainActivity">

    <RelativeLayout
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">


        <Button
            android:id="@+id/btnStartService"
            android:layout_weight="1"
            android:text="@string/start_service"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnEndService"
            android:layout_weight="1"
            android:text="@string/end_service"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

        <Button
            android:id="@+id/btnDownloadIntentImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/intent_download_img"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnDownloadJobIntentImg"
            android:layout_below="@+id/btnDownloadIntentImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/job_intent_download_img"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnDownloadWorkManagerImg"
            android:layout_below="@+id/btnDownloadJobIntentImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/work_manager_download_img"
            android:textAllCaps="false" />

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>